<resources>
    <string name="app_name">MathGames</string>
    <string name="fight_mode">fight mode</string>
    <string name="normal_mode">normal mode</string>
    <string name="time_mode">time mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plusSign">+</string>
    <string name="multiplySign">*</string>
    <string name="all">all</string>
    <string name="minusSign">-</string>
    <string name="_1_10_Text">1-10</string>
    <string name="_1_100Text">1_100</string>
    <string name="choose_playing_time">Choose Playing Time</string>
    <string name="_30sec">30sec</string>
    <string name="_45sec">45sec</string>
    <string name="_60sec">60sec</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="choose_if_you_want_sums_with_numbers_1_10_or_1_100">Choose if you want sums with numbers 1-10 or 1-100</string>
    <string name="start_game">Start Game</string>
    <string name="choose_if_you_want_to_play_with_numbers_1_10_or_1_100">Choose if you want to play with numbers 1-10 or 1-100</string>
    <string name="_1">1</string>
    <string name="first_number">first Number</string>
    <string name="or_or_or">+or-or*or/</string>
    <string name="second_number">second number</string>
    <string name="textOfUitkomst">=</string>
    <string name="answer">answer</string>
    <string name="_1234">1234</string>
    <string name="_123">123</string>
    <string name="signQuestion">\?</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="in">in</string>
    <string name="new_game">New Game</string>
    <string name="_1_20">1-20</string>
    <string name="_1_30">1-30</string>
    <string name="_1_40">1-40</string>
    <string name="_1_50">1-50</string>
    <string name="choose_the_range_of_numbers_you_want_to_play_with">Choose the range of numbers you want to play with</string>
    <string name="number_range">Number range</string>
    <string name="play_time">Play Time</string>
    <string name="start">Start</string>
    <string name="leeg">leeg</string>
    <string name="_1_10">1-10</string>
    <string name="divSign">/</string>
    <string name="hoe_snel_kun_jij_hoofdrekenen">Hoe snel kun jij hoofdrekenen?</string>
    <string name="think_of_sum">think of sum</string>
    <string name="kies_het_type_sommen">Kies het type sommen</string>
    <string name="test">test</string>
    <string name="plus">Plus</string>
    <string name="min">Min</string>
    <string name="vermenigvuldig">Vermenigvuldig</string>
    <string name="delen">Delen</string>
    <string name="kies_met_welke_getallen_de_sommen_worden_gemaakt">Kies met welke getallen de sommen worden gemaakt</string>
    <string name="kies_hoe_lang_het_spel_moet_duren">Kies hoe lang het spel moet duren</string>
    <string name="button1" />
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="hint">hint</string>
    <string name="getallen_van">Getallen van</string>
    <string name="getallen">Getallen</string>
    <string name="met_getallen_van">Met getallen van</string>
    <string name="sommen">sommen</string>
    <string name="nietGevonden">Niet gevonden</string>
    <string name="streepjeEn1">1 -</string>
    <string name="sec">sec</string>
    <string name="hoogsteScore">Hoogste score:</string>
    <string name="nieuweHoogsteScore">NIEUWE hoogste score:</string>
    <string name="hoogsteScoreTotNuToe">Hoogste score tot nu toe:</string>
    <string name="mathspeed">MathSpeed</string>
    <string name="home">home</string>
    <string name="starimage">starImage</string>
    <string name="stop">STOP</string>
</resources>