<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseRangeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ChooseRangeNumbersFragment">


    <TextView
        android:id="@+id/chooseNumberRangeTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/kies_met_welke_getallen_de_sommen_worden_gemaakt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollRange"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fadeScrollbars="false"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseNumberRangeTxtView">

        <LinearLayout
            android:id="@+id/scrollButtonHorizontalLayoutRangeNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/rangeNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text1_10_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_10_Text"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseNumberRangeTxtView"
                     />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_1_20Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_20"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_1_30Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_30"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_1_40Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_40"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_1_50Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_50"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text1_100_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_100Text"
                    style="@style/myCustomOutlinedButton"
                    app:strokeWidth="4dp"
                    />


            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/chooseTimeTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/kies_hoe_lang_het_spel_moet_duren"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollRange" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTimeTxtView">

        <LinearLayout
            android:id="@+id/scrollButtonHorizontalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/rangeSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/time30secBtn"
                    style="@style/myCustomOutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30sec"
                    app:strokeWidth="4dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/time45secBtn"
                    style="@style/myCustomOutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_45sec"
                    app:strokeWidth="4dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/time60secBtn"
                    style="@style/myCustomOutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_60sec"
                    app:strokeWidth="4dp" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start"
        android:textColor="@color/blueGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>