<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseArithmeticOperationConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    tools:context=".ui.main.ChooseArithmeticOperationFragment">

    <TextView
        android:id="@+id/chooseArithmOperTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"
        android:text="@string/kies_het_type_sommen"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/plusTxtImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusTxtImageBtn"
        style="@style/buttonChooseArithExpr"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:drawableEnd="@drawable/ic_addsignroundbckgrnd28dpx28dp"
        android:gravity="start|center_vertical"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/minTxtImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minTxtImageBtn"
        style="@style/buttonChooseArithExpr"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:drawableEnd="@drawable/ic_minsignroundbckgrnd28dpx28dp"
        android:gravity="start|center_vertical"
        android:text="@string/min"
        app:layout_constraintBottom_toTopOf="@+id/multiplyTxtImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiplyTxtImageBtn"
        style="@style/buttonChooseArithExpr"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:drawableEnd="@drawable/ic_multiplysignroundbckgrnd28x28dp"
        android:gravity="start|center_vertical"
        android:text="@string/vermenigvuldig"
        app:layout_constraintBottom_toTopOf="@+id/divideTxtImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/divideTxtImageBtn"
        style="@style/buttonChooseArithExpr"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:drawableEnd="@drawable/ic_dividesignroundbckgrnd28x28dp"
        android:gravity="start|center_vertical"
        android:text="@string/delen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplyTxtImageBtn" />

    <Button
        android:id="@+id/gameTxtImageBtn"
        style="@style/buttonChooseArithExpr"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:drawableEnd="@drawable/ic_dividesignroundbckgrnd28x28dp"
        android:gravity="start|center_vertical"
        android:text="@string/wedstrijd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideTxtImageBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>