<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playfieldConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlayFieldFragment">

    <TextView
        android:id="@+id/nrOfSecTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/leeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/timeProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:scaleY="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EditTextNumber1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/_1234"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer1Btn"
        app:layout_constraintEnd_toStartOf="@+id/arithmeticExprTxtbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeProgressBar" />

    <TextView
        android:id="@+id/editTextNumber2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/_1234"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/isTxtBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/arithmeticExprTxtbox"
        app:layout_constraintTop_toTopOf="@+id/arithmeticExprTxtbox" />

    <TextView
        android:id="@+id/isTxtBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/textOfUitkomst"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/arithmeticExprTxtbox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/or_or_or"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EditTextNumber1"
        app:layout_constraintTop_toTopOf="@+id/EditTextNumber1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer1Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/answer2Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextNumber1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/answer1Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/answer1Btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer3Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/answer4Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1Btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer4Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/answer3Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/answer3Btn" />

    <TextView
        android:id="@+id/scoreTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextTxtView" />

    <TextView
        android:id="@+id/scoreTextTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3Btn" />

</androidx.constraintlayout.widget.ConstraintLayout>